bugfix: toc-btn was previously visible on larger screens

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -28,10 +28,8 @@
     overflow-y:scroll;
     max-height:100%;
 }
-#toc-btn{
-    // display:none;
-}
 
+// toc-btn display is handled by toggle-toc.js, to be able to not render it on root
 
 @media only screen and (max-width:576px){
     #logo{
